syntax = "proto3";
option csharp_namespace = "OzonEdu.Merchandise.Grpc";
package Merch;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service MerchGrpc {

  rpc RequestMerch (RequestMerchRequest) returns (google.protobuf.Empty);

  rpc GetInfoAboutIssuanceMerch (GetInfoAboutIssuanceMerchRequest) returns (GetInfoAboutIssuanceMerchResponse);
}

message RequestMerchRequest {
  int64 employee_id = 1;
}

message GetInfoAboutIssuanceMerchRequest {
  int64 employee_id = 1;
}

message GetInfoAboutIssuanceMerchResponse{
  repeated GetInfoAboutIssuanceMerchResponseUnit units = 1;
}

message GetInfoAboutIssuanceMerchResponseUnit {
  int64 item_id = 1;
  google.protobuf.StringValue item_name = 2;
  google.protobuf.Timestamp date_of_issue = 3;
}